# Termeet-backend

./: .dockerignore  .env-example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-backend.yaml  deploy-dev.yaml  deploy-open-api.yaml  deploy-prod.yaml
backend/: alembic.ini  nginx.conf
backend/.github/workflows/: deploy-open-api.yaml
backend/alembic/: env.py
backend/docs/: Dockerfile  openapi.yaml  openapi.yml  openapi_fastapi.yaml
backend/grpc/: grpc_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0e1868abcd09_add_feedback_table.py  1979c8b73d61_refactor_users.py  227982df7bde_add_link_feedback_with_user.py  2546af58a223_add_nickname_to_users.py  43517ce44bea_add_is_verified_to_users.py  65800022e291_change_type_of_field_password_hash.py  90b1659e2a6a_field_email_to_unique.py  98ae38faeb3c_initial_migration.py  a567bb8b59e2_add_oauthaccount.py  b4b87ef7b5ce_refactor_slots_in_meetings.py  c71c2068b6dd_add_field_password_hash_to_users.py  f5f799165d35_add_default_value_to_slots_in_meetings.py
backend/src/: broker.py  config.py  database.py  dependencies.py  lifespan.py  main.py
backend/src/auth/: dependencies.py  infrastructure.py  models.py  repositories.py  routers.py  schemas.py  services.py  utils.py
backend/src/feedback/: dependencies.py  infrastructures.py  models.py  repositories.py  routers.py  schemas.py  services.py
backend/src/meetings/: infrastructure.py  models.py  repositories.py  routers.py  schemas.py  services.py
backend/src/meets/: models.py
backend/src/teams/: models.py
backend/src/user/: models.py
backend/src/users/: infrastructures.py  models.py  repositories.py  (+3 more)
backend/templates/: reset_password_email.html  verification_email.html
backend/tests/: conftest.py  records_nologin.json  test_base.py  test_consumer.py  test_db.py  test_just.py  test_meetings_mod.py  test_producer.py
prometheus_data/: prometheus.yml
(+5 files in other folders)
