[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Маклаков Даниил Павлович",email = "dpmaklakov@edu.hse.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.3.0"

# Почитай, зачем все-таки это нужно
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
